src/assets/css/App.css
body {
	text-align: center;
}

.navbar {
	margin-left: auto;
	margin-right: auto;
	width: 80%;
	backdrop-filter: blur(15px) saturate(100%);
	-webkit-backdrop-filter: blur(15px) saturate(100%);
	background-color: rgba(19, 54, 103, 0.25);
	border-bottom-left-radius: 20px;
	border-bottom-right-radius: 20px;
	border-bottom: 2px solid rgba(255, 255, 255, 0.125);
	border-left: 2px solid rgba(255, 255, 255, 0.125);
	border-right: 2px solid rgba(255, 255, 255, 0.125);
}

.nav-item {
	backdrop-filter: blur(25px) saturate(66%);
	-webkit-backdrop-filter: blur(25px) saturate(66%);
	border-radius: 12px;
	border: 2px solid rgba(255, 255, 255, 0.125);
	color: rgba(255, 255, 255, 0.75);
	display: flex;
	justify-content: center;
	align-items: center;
	margin: 0px 9px 0px 9px;
	padding: 5px 15px 5px 15px;
}

.nav-item:hover {
	background-color: rgba(255, 255, 255, 0.25);
}

.logo {
	width: 50px;
	margin-bottom: 5px;
	margin-right: 20px;
}

.toggle-div {
	display: flex;
	margin: auto auto auto auto;
	justify-content: center;
}

.toggle-div span {
	margin-left: 5%;
	margin-right: 5%;
}

.toggle.react-toggle .react-toggle-track {
	background-color: skyblue;
}

.toggle.react-toggle:hover:not(.react-toggle--disabled) .react-toggle-track {
	background-color: skyblue;
}

.locator {
	display: flex;
	height: 460px;
	width: 70%;
	margin: auto;
	padding: 20px;
}

.searchbox {
	display: flex;
	flex-direction: column;
	justify-content: center;
	width: 30%;
	padding: 10px;
	background-color: rgba(255, 255, 255, 0.5);
	color: black;
	border-radius: 5px;
}

.mymap {
	height: 100%;
	width: 65%;
}

input {
	padding: 10px;
	border-radius: 4px;
	border: 10px;
	width: 200px;
}

.leaflet-container {
	width: 80vw;
	height: 400px;
	padding: 30px 10px;
	box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
}

@media screen and (max-width: 1500px) {
	.locator {
		width: 75%;
	}
}

@media screen and (max-width: 1200px) {
	.locator {
		width: 85%;
	}
}

@media screen and (max-width: 900px) {
  .locator {
    flex-direction: column;
    height: 800px;
    width: 100%;
    margin: auto;
  }
  .searchbox {
    height:35%;
    width: 80%;
    margin: auto;
    justify-content: start;
  }
  
  .mymap {
    height: 65%;
    width: 100%;
  }
}

@media screen and (max-width: 480px) {
	.Results {
		width: 80%;
		margin: auto;
		margin-top: 20px;
	}
}

